--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Primer Página</title>
+        <title>hello world</title>
+        <link href="main.css" rel="stylesheet"/>
     </head>
     <body>
-        
+        <h1>Hello World!</h1>
     </body>
 </html>
