--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     						<h5 class="title title-left">Experiencia</h5>
     						<ul>
     							<li>
-    								<h6>Universisad Autónoma de Querétaro</h6>
+    								<h6>Universidad Autónoma de Querétaro</h6>
     								<p>Desarrollador de Contenido Educativo</p>
     							</li>
     							<li>
