Update information to June 2022

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<title>Alejandro Lozada</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/portafolio.ico" />
+    <link rel="shortcut icon" href="assets/img/logo.png" />
 
     <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800" rel="stylesheet" />
@@ -37,7 +37,9 @@
 			<div class="container">
 
 			  <!-- Logo -->
-			  <a class="logo" href="#">Alex</a>
+			  <a class="logo" href="#">
+					<img src="assets/img/alelozada-logo.png" alt="logo">
+				</a>
 
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="icon-bar"><i class="fas fa-bars"></i></span>
@@ -111,7 +113,7 @@
     				<div class="col-lg-7">
     					<div class="content">
 							<h4 class="title title-left">Ingeniero de Software / Desarrollador Front-end</h4>
-    						<p>Soy <span>Alejandro Lozada</span>, en el 2019 recibí mi título como <span>Ingeniero de Sofware</span>. En el ámbito profesional me desarrollé en plataformas educativas enfocadas al e-learnig, usando herramientas especializadas en educación a distancia.</p>
+    						<p>Soy <span>Alejandro Lozada</span>, en el 2019 recibí mi título como <span>Ingeniero de Software</span>. En el ámbito profesional me desarrollé en plataformas educativas enfocadas al e-learning, usando herramientas especializadas en educación a distancia.</p>
 							
 							<p>Busco incrementar mis habilidades en el área de Desarrollo Web y la Inteligencia Artificial, por lo cual en la actualidad estoy estudiando el programa de Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>.</p>
 
@@ -127,7 +129,7 @@
     							<a href="https://gitlab.com/alelozada" target="_blank">
     								<span class="icon"><i class="fab fa-gitlab"></i></span>
     							</a>
-    							<a href="https://twitter.com/ale_lozadag" target="_blank">
+    							<a href="https://twitter.com/alelozadadev" target="_blank">
     								<span class="icon"><i class="fab fa-twitter"></i></span>
     							</a>
     						</div>
@@ -136,7 +138,7 @@
                               <a href="#0" front="Contacto" back="&#xf1d8;" data-scroll-nav="4"></a>
                             </span>
                             <span class="buton buton-bord text-center">
-                              <a href="assets\documents\alejandro-lozada-CV.pdf" front="Descarga CV" back="&#xf019;" download="Alejandro Lozada - CV.pdf"></a>
+                              <a href="assets\documents\Alejandro Lozada - CV.pdf" front="Descarga CV" back="&#xf019;" download="Alejandro Lozada - CV.pdf"></a>
                             </span>
     					</div>
     				</div>
@@ -206,11 +208,11 @@
     						</div>
     						<div class="skill">
     							<h6>JavaScript <span>60%</span></h6>
-    							<div class="skills-progress"><span data-value='60%'></span></div>
+    							<div class="skills-progress"><span data-value='80%'></span></div>
     						</div>
     						<div class="skill">
     							<h6>Python <span>40%</span></h6>
-    							<div class="skills-progress"><span data-value='40%'></span></div>
+    							<div class="skills-progress"><span data-value='50%'></span></div>
     						</div>
     					</div>
     				</div>
@@ -346,7 +348,7 @@
 						<!-- gallery item -->
 						<div class="col-md-6 col-lg-4 items academlo">
 							<div class="item-img">
-								<img src="assets\img\portfolio\instagram-clone-cover.png" alt="image">
+								<img src="assets\img\portfolio\instagram-clone-cover.png" alt="instaclone">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
 										<a href="https://instaclone-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
@@ -354,7 +356,7 @@
 										</a>
 										<h5>
 											<a href="https://instaclone-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												Proyecto Academlo
+												<p>Proyecto desarrollado en Academlo en el cual se clonó la interfaz de <b>Instagram</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
 											</a>
 										</h5>
 									</div>
@@ -366,15 +368,19 @@
 						</div>
 
 						<!-- gallery item -->
-						<div class="col-md-6 col-lg-4 items gamedev">
+						<div class="col-md-6 col-lg-4 items academlo">
 							<div class="item-img">
-								<img src="assets\img\portfolio\unity-projects-cover.png" alt="image">
+								<img src="assets\img\portfolio\shopping-cart-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Unity Projets</h6>
-										<h5>Hello World!</h5>
+										<h6>Shopping Cart</h6>
+										<h5>
+											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+												<p>Proyecto desarrollado en Academlo en el cual se desarrolló la interfaz de un <b>Carrito de compras</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
+											</a>
+										</h5>
 									</div>
-									<a href="assets\img\portfolio\unity-projects-cover.png" class="link">
+									<a href="assets\img\portfolio\shopping-cart-cover.png" class="link">
 										<i class="fas fa-eye"></i>
 									</a>
 								</div>
@@ -384,18 +390,80 @@
 						<!-- gallery item -->
 						<div class="col-md-6 col-lg-4 items academlo">
 							<div class="item-img">
-								<img src="assets\img\portfolio\ecommerce-project-cover.png" alt="image">
+								<img src="assets\img\portfolio\quote-machine-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>eCommerce</h6>
-										<h5>Academlo Project</h5>
+										<h6>Shopping Cart</h6>
+										<h5>
+											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
+											</a>
+										</h5>
 									</div>
-									<a href="assets\img\portfolio\ecommerce-project-cover.png" class="link">
+									<a href="assets\img\portfolio\quote-machine-cover.png" class="link">
 										<i class="fas fa-eye"></i>
 									</a>
 								</div>
 							</div>
 						</div>
+
+						<!-- gallery item -->
+						<div class="col-md-6 col-lg-4 items academlo">
+							<div class="item-img">
+								<img src="assets\img\portfolio\weather-app-cover.png" alt="image">
+								<div class="item-img-overlay text-center valign">
+									<div class="overlay-info vertical-center full-width">
+										<h6>Shopping Cart</h6>
+										<h5>
+											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
+											</a>
+										</h5>
+									</div>
+									<a href="assets\img\portfolio\weather-app-cover.png" class="link">
+										<i class="fas fa-eye"></i>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- gallery item -->
+						<div class="col-md-6 col-lg-4 items academlo">
+							<div class="item-img">
+								<img src="assets\img\portfolio\whatsapp-api-cover.png" alt="image">
+								<div class="item-img-overlay text-center valign">
+									<div class="overlay-info vertical-center full-width">
+										<h6>Shopping Cart</h6>
+										<h5>
+											<a href="https://github.com/alelozada/api-whatsapp" target="_blank" rel="noopener noreferrer">
+												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>API de WhatsApp</b> usando <b>Node JS</b>.</p>
+											</a>
+										</h5>
+									</div>
+									<a href="assets\img\portfolio\whatsapp-api-cover.png" class="link">
+										<i class="fas fa-eye"></i>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- gallery item -->
+						<div class="col-md-6 col-lg-4 items gamedev">
+							<div class="item-img">
+								<img src="assets\img\portfolio\tutorial-unity2D-cover.png" alt="image">
+								<div class="item-img-overlay text-center valign">
+									<div class="overlay-info vertical-center full-width">
+										<h6>Unity Projets</h6>
+										<h5>Hello World!</h5>
+									</div>
+									<a href="assets\img\portfolio\tutorial-unity2D-cover.png" class="link">
+										<i class="fas fa-eye"></i>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						
 
 						<!-- gallery item
 						<div class="col-md-6 col-lg-4 items web">
@@ -450,7 +518,7 @@
 
 					<div class="col-md-12 text-center">
 						<span class="buton">
-						  <a href="#0" front="View All" back="&#xf06e;"></a>
+						  <a href="https://github.com/alelozada" target="_blank" front="View All" back="&#xf06e;"></a>
 						</span>
 					</div>
 
@@ -660,7 +728,9 @@
                     				<span class="icon icon-mobile"></span>
                     				<div class="cont">
                     					<h6>Phone</h6>
-                    					<p>+52 1 012 345 6789</p>
+															<a href="https://wa.me/14426669369">
+																+52 1 442 666 9369
+															</a>
                     				</div>
                     			</div>
                     		</div>
@@ -669,7 +739,9 @@
                     				<span class="icon icon-envelope"></span>
                     				<div class="cont">
                     					<h6>Email</h6>
-                    					<p>ale.lozadag@gmail.com</p>
+															<a href="mailto:alelozada@msn.com">
+															alelozada@msn.com
+															</a>
                     				</div>
                     			</div>
                     		</div>
@@ -692,7 +764,7 @@
 
     	<!-- ===== Start Footer ===== -->
     	<footer class="footer">
-    		<p>Copyright &copy; All Rights Reserved. Theme edited <a href="http://themeforest.net/user/his7am" target="_blank" rel="noopener noreferrer">Personalia</a></p>
+    		<p>Copyright &copy; All Rights Reserved.</p>
     	</footer>
     	<!-- ===== End Footer ===== -->
 
