edited developer name

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				            <span class="cd-words-wrapper">
 				              <b class="is-visible">Alejandro Lozada</b>
 				              <b>Ingeniero de Software</b>
-				              <b>Desarrollador Front-end</b>
+				              <b>Desarrollador Web</b>
 				            </span>
 		          		</h1>
     				</div>
@@ -105,7 +105,7 @@
     				</div>
     				<div class="col-lg-7">
     					<div class="content">
-							<h4 class="title title-left">Ingeniero de Software / Desarrollador Front-end</h4>
+							<h4 class="title title-left">Ingeniero de Software / Desarrollador Web</h4>
     						<p>Soy <span>Alejandro Lozada</span>, en el 2019 recibí mi título como <span>Ingeniero de Software</span>. En el ámbito profesional me desarrollé en plataformas educativas enfocadas al e-learning, usando herramientas especializadas en educación a distancia.</p>
 							
 							<p>Busco incrementar mis habilidades en el área de Desarrollo Web y la Inteligencia Artificial, por lo cual en la actualidad estoy estudiando el programa de Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>.</p>
