edited weather info

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 										<h6>Shopping Cart</h6>
 										<h5>
 											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
+												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>aplicación que muestra el clima</b> usando <b>REACT</b>.</p>
 											</a>
 										</h5>
 									</div>
