edited portfolio info

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 								<img src="assets\img\portfolio\quote-machine-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Shopping Cart</h6>
+										<h6>Quote Machine</h6>
 										<h5>
 											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
@@ -305,9 +305,9 @@
 								<img src="assets\img\portfolio\weather-app-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Shopping Cart</h6>
+										<h6>Weather App</h6>
 										<h5>
-											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+											<a href="https://weather-app-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>aplicación que muestra el clima</b> usando <b>REACT</b>.</p>
 											</a>
 										</h5>
@@ -325,7 +325,7 @@
 								<img src="assets\img\portfolio\whatsapp-api-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Shopping Cart</h6>
+										<h6>WhatsApp API</h6>
 										<h5>
 											<a href="https://github.com/alelozada/api-whatsapp" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>API de WhatsApp</b> usando <b>Node JS</b>.</p>
