fixed: whatsApp link and experience

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
     						<span class="icon icon-briefcase"></span><br>
     						<h5 class="title title-left">Experiencia</h5>
     						<ul>
+									<li>
+										<h6>Universidad Autónoma de Querétaro</h6>
+    								<p>Profesor de Eduación Continua</p>
+									</li>
     							<li>
     								<h6>Universidad Autónoma de Querétaro</h6>
     								<p>Desarrollador de Contenido Educativo</p>
@@ -172,10 +176,6 @@
     							<li>
     								<h6>Ojiva Consultores S.A de C.V</h6>
     								<p>Tecnología e Investigación</p>
-    							</li>
-    							<li>
-    								<h6>CIATEQ A.C. Centro de Tecnología Avanzada</h6>
-    								<p>Practicante</p>
     							</li>
     						</ul>
     					</div>
@@ -386,7 +386,7 @@
                     				<span class="icon icon-mobile"></span>
                     				<div class="cont">
                     					<h6>Phone</h6>
-															<a href="https://wa.me/14426669369">
+															<a href="https://wa.me/+5214426669369">
 																+52 1 442 666 9369
 															</a>
                     				</div>
