--- a/index.html
+++ b/index.html
@@ -187,22 +187,46 @@
     						<span class="icon icon-layers"></span><br>
     						<h5 class="title title-left">Habilidades</h5>
 
-    						<div class="skill">
-    							<h6>HTML <span>90%</span></h6>
-    							<div class="skills-progress"><span data-value='90%'></span></div>
-    						</div>
-    						<div class="skill">
-    							<h6>CSS <span>85%</span></h6>
-    							<div class="skills-progress"><span data-value='85%'></span></div>
-    						</div>
-    						<div class="skill">
-    							<h6>JavaScript <span>80%</span></h6>
-    							<div class="skills-progress"><span data-value='80%'></span></div>
-    						</div>
-    						<div class="skill">
-    							<h6>Python <span>50%</span></h6>
-    							<div class="skills-progress"><span data-value='50%'></span></div>
-    						</div>
+    						<div class="row services">
+									<div class="col-lg-4 col-md-6">
+										<div class="item mb-md50">
+											<span class="icon"><i class="fab fa-html5"></i></span>
+											<h6>HTML5</h6>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-6 active bolt">
+										<div class="item mb-md50">
+											<span class="icon"><i class="fab fa-css3"></i></span>
+											<h6>CSS3</h6>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-6">
+										<div class="item mb-md50">
+											<span class="icon"><i class="fab fa-js"></i></span>
+											<h6>JavaScript</h6>
+										</div>
+									</div>
+									<div class="bord full-width"></div>
+									<div class="col-lg-4 col-md-6">
+										<div class="item mb-md50">
+											<span class="icon"><i class="fab fa-react"></i></span>
+											<h6>REACT JS</h6>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-6 active">
+										<div class="item mb-sm50">
+											<span class="icon"><i class="fab fa-node-js"></i></span>
+											<h6>Node JS</h6>
+										</div>
+									</div>
+									<div class="col-lg-4 col-md-6">
+										<div class="item">
+											<span class="icon"><i class="fab fa-python"></i></span>
+											<h6>Python</h6>
+										</div>
+									</div>
+			
+								</div>
     					</div>
     				</div>
     			</div>
@@ -265,7 +289,9 @@
 								<img src="assets\img\portfolio\shopping-cart-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Shopping Cart</h6>
+										<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+											<h6>Shopping Cart</h6>
+										</a>
 										<h5>
 											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló la interfaz de un <b>Carrito de compras</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
@@ -285,9 +311,11 @@
 								<img src="assets\img\portfolio\quote-machine-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Quote Machine</h6>
+										<a href="https://quote-machine-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+											<h6>Quote Machine</h6>
+										</a>
 										<h5>
-											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+											<a href="https://quote-machine-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
 											</a>
 										</h5>
@@ -305,7 +333,9 @@
 								<img src="assets\img\portfolio\weather-app-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Weather App</h6>
+										<a href="https://weather-app-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
+											<h6>Weather App</h6>
+										</a>
 										<h5>
 											<a href="https://weather-app-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>aplicación que muestra el clima</b> usando <b>REACT</b>.</p>
@@ -325,7 +355,9 @@
 								<img src="assets\img\portfolio\whatsapp-api-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>WhatsApp API</h6>
+										<a href="https://github.com/alelozada/api-whatsapp" target="_blank" rel="noopener noreferrer">
+											<h6>WhatsApp API</h6>
+										</a>
 										<h5>
 											<a href="https://github.com/alelozada/api-whatsapp" target="_blank" rel="noopener noreferrer">
 												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>API de WhatsApp</b> usando <b>Node JS</b>.</p>
@@ -342,13 +374,19 @@
 						<!-- gallery item -->
 						<div class="col-md-6 col-lg-4 items gamedev">
 							<div class="item-img">
-								<img src="assets\img\portfolio\tutorial-unity2D-cover.png" alt="image">
+								<img src="assets\img\portfolio\snake-unity-cover.png" alt="image">
 								<div class="item-img-overlay text-center valign">
 									<div class="overlay-info vertical-center full-width">
-										<h6>Unity Projets</h6>
-										<h5>Hello World!</h5>
+										<a href="https://alehorror.itch.io/snake" target="_blank" rel="noopener noreferrer">
+											<h6>Unity Projets - SNAKE</h6>
+										</a>
+										<h5>
+											<a href="https://alehorror.itch.io/snake" target="_blank" rel="noopener noreferrer">
+												<p>Proyecto desarrollado en <b>Unity</b> en el cual se desarrolló el juego clásico <b>Snake</b>.</p>
+											</a>
+										</h5>
 									</div>
-									<a href="assets\img\portfolio\tutorial-unity2D-cover.png" class="link">
+									<a href="assets\img\portfolio\snake-unity-cover.png" class="link">
 										<i class="fas fa-eye"></i>
 									</a>
 								</div>
