--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     	<!-- ===== End Navbar ===== -->
 
     <!-- ===== Start Header ===== -->
-    	<header class="header valign bg-img" data-scroll-index="0" data-overlay-dark="5" data-background="assets/img/bg01.jpg" data-stellar-background-ratio="0.5">
+    	<header id="header" class="header valign bg-img" data-scroll-index="0" data-overlay-dark="5" data-background="assets/img/bg01.jpg" data-stellar-background-ratio="0.5">
     		<div class="container">
     			<div class="row">
     				<div class="vertical-center full-width text-center caption">
@@ -382,7 +382,7 @@
 										</a>
 										<h5>
 											<a href="https://alehorror.itch.io/snake" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en <b>Unity</b> en el cual se desarrolló el juego clásico <b>Snake</b>.</p>
+												<p>El juego clásico <b>Snake</b> desarrollado en la plataforma <b>Unity</b></p>
 											</a>
 										</h5>
 									</div>
@@ -503,6 +503,29 @@
 		
       	<!-- custom scripts -->
         <script src="assets/js/scripts.js"></script>
+
+				<script src="assets/js/three.min.js"></script>
+				<script src="assets/js/vanta.birds.min.js"></script>
+				<script>
+				VANTA.BIRDS({
+					el: "#header",
+					mouseControls: true,
+  				touchControls: true,
+  				gyroControls: false,
+  				minHeight: 200.00,
+  				minWidth: 200.00,
+  				scale: 1.00,
+  				scaleMobile: 1.00,
+  				color1: 0xff4b00,
+  				color2: 0x5813c3,
+  				wingSpan: 15.00,
+  				separation: 56.00,
+  				alignment: 60.00,
+  				cohesion: 62.00,
+					quantity: 1.00,
+					backgroundAlpha: 0.00
+				})
+				</script>
 </body>
 
 </html>
