change color of birds

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
   				minWidth: 200.00,
   				scale: 1.00,
   				scaleMobile: 1.00,
-  				color1: 0xff4b00,
+  				color1: 0xffffff,
   				color2: 0x5813c3,
   				wingSpan: 15.00,
   				separation: 56.00,
