--- a/index.html
+++ b/index.html
@@ -107,13 +107,15 @@
     					<div class="content">
 							<h4 class="title title-left">Ingeniero de Software / Desarrollador Web</h4>
     						<p>Soy <span>Alejandro Lozada</span>, en el 2019 recibí mi título como <span>Ingeniero de Software</span>. En el ámbito profesional me desarrollé en plataformas educativas enfocadas al e-learning, usando herramientas especializadas en educación a distancia.</p>
-							
-							<p>Busco incrementar mis habilidades en el área de Desarrollo Web y la Inteligencia Artificial, por lo cual en la actualidad estoy estudiando el programa de Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>.</p>
 
-							<p>En mis tiempos libres me gusta desarrollar videojuegos en la plataforma <span>Unity</span>.</p>
+							<p>Actualmente trabajo como profesor en la <span>Universidad Autónoma de Querétaro</span> impartiendo talleres de actualización para los alumnos de la Facultad de Informática; hasta el momento he participado en la formación de más de 100 alumnos en el transcurso de un año. Trabajando como profesor pude desarrollar mi habilidad para hablar en público y mejorar mis estrategias de comunicación.</p>
+
+							<p>Cuento con certificaciones que me avalan como Desarrollador Web. Soy egresado del programa Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>, el cual me dio las habilidades técnicas para desarrollar interfaces dinámicas y escalables, implementar y consumir API Restful, así como también entender, crear, mantener y extender el trabajo realizado en Base de Datos, Ingeniería en Sistemas y clientes. Cuento con la habilidad de ayudar con los requerimientos a otros desarrolladores. </p>
+
+							<p>En mis tiempos libres me gusta desarrollar videojuegos en la plataforma <span>Unity</span> e investigar temas sobre <span>Inteligencia Artificial</span>; soy fanático de los deportes, en especial del Manchester United y recientemente adquirí el gusto por la Fórmula 1.</p>
 
     						<div class="social-icon">
-    							<a href="https://www.linkedin.com/in/ale-lozada/" target="_blank">
+    							<a href="https://www.linkedin.com/in/alelozadadev/" target="_blank">
 									<span class="icon"><i class="fab fa-linkedin-in"></i></span>
     							</a>
     							<a href="https://github.com/alelozada" target="_blank">
@@ -171,7 +173,7 @@
 									</li>
     							<li>
     								<h6>Universidad Autónoma de Querétaro</h6>
-    								<p>Desarrollador de Contenido Educativo</p>
+    								<p>Desarrollador de Contenido e-learning</p>
     							</li>
     							<li>
     								<h6>Ojiva Consultores S.A de C.V</h6>
@@ -272,7 +274,7 @@
 										</a>
 										<h5>
 											<a href="https://instaclone-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se clonó la interfaz de <b>Instagram</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
+												<p>Desarrollo de interfaz de <b>Instagram</b> usando diferentes técnicas de maquetación con <b>HTML</b> y <b>CSS</b>.</p>
 											</a>
 										</h5>
 									</div>
@@ -294,7 +296,7 @@
 										</a>
 										<h5>
 											<a href="https://shopping-cart-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se desarrolló la interfaz de un <b>Carrito de compras</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
+												<p>Desarrollo de interfaz de un <b>Carrito de compras</b> usando maquetación con <b>HTML</b> y <b>CSS</b>.</p>
 											</a>
 										</h5>
 									</div>
@@ -316,7 +318,7 @@
 										</a>
 										<h5>
 											<a href="https://quote-machine-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se desarrolló un <b>generador aleatorio de frases</b> usando <b>REACT</b>.</p>
+												<p><b>Generador aleatorio de frases</b> usando <b>REACT</b>. Se obtuvo la habilidad de los conceptos básico como el renderizado de los elementos, su estado y ciclo de vida.</p>
 											</a>
 										</h5>
 									</div>
@@ -338,7 +340,7 @@
 										</a>
 										<h5>
 											<a href="https://weather-app-alelozada.netlify.app/" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>aplicación que muestra el clima</b> usando <b>REACT</b>.</p>
+												<p><b>Aplicación que muestra el clima</b> usando <b>REACT</b>. Se obtuvo la habilidad de consumo de API de terceros. </p>
 											</a>
 										</h5>
 									</div>
@@ -360,7 +362,7 @@
 										</a>
 										<h5>
 											<a href="https://github.com/alelozada/api-whatsapp" target="_blank" rel="noopener noreferrer">
-												<p>Proyecto desarrollado en Academlo en el cual se desarrolló una <b>API de WhatsApp</b> usando <b>Node JS</b>.</p>
+												<p>Desarrollo de una <b>API de chat</b> usando <b>Node JS</b>. Se obtuvo el conocimiento para implementar una API Restful con autenticación y almacenamiento en una base de datos.</p>
 											</a>
 										</h5>
 									</div>
@@ -382,7 +384,7 @@
 										</a>
 										<h5>
 											<a href="https://alehorror.itch.io/snake" target="_blank" rel="noopener noreferrer">
-												<p>El juego clásico <b>Snake</b> desarrollado en la plataforma <b>Unity</b></p>
+												<p>El juego clásico <b>Snake</b> desarrollado en la plataforma <b>Unity</b> usando C#.</p>
 											</a>
 										</h5>
 									</div>
@@ -435,8 +437,8 @@
                     				<span class="icon icon-envelope"></span>
                     				<div class="cont">
                     					<h6>Email</h6>
-															<a href="mailto:alelozada@msn.com">
-															alelozada@msn.com
+															<a href="mailto:alelozada.dev@gmail.com">
+															alehorror.dev@gmail.com
 															</a>
                     				</div>
                     			</div>
