--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     	<section class="aboutme section-padding" data-scroll-index="1">
     		<div class="container">
     			<div class="row">
-    				<div class="col-lg-5">
+    				<div class="aboutme-container-img col-lg-5">
     					<div class="aboutme-img mb-md50">
     						<img src="assets\img\alelozada.jpg" alt="">
     					</div>
@@ -109,8 +109,8 @@
     						<p>Soy <span>Alejandro Lozada</span>, en el 2019 recibí mi título como <span>Ingeniero de Software</span>. En el ámbito profesional me desarrollé en plataformas educativas enfocadas al e-learning, usando herramientas especializadas en educación a distancia.</p>
 
 							<p>Actualmente trabajo como profesor en la <span>Universidad Autónoma de Querétaro</span> impartiendo talleres de actualización para los alumnos de la Facultad de Informática; hasta el momento he participado en la formación de más de 100 alumnos en el transcurso de un año. Trabajando como profesor pude desarrollar mi habilidad para hablar en público y mejorar mis estrategias de comunicación.</p>
-
-							<p>Cuento con certificaciones que me avalan como Desarrollador Web. Soy egresado del programa Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>, el cual me dio las habilidades técnicas para desarrollar interfaces dinámicas y escalables, implementar y consumir API Restful, así como también entender, crear, mantener y extender el trabajo realizado en Base de Datos, Ingeniería en Sistemas y clientes. Cuento con la habilidad de ayudar con los requerimientos a otros desarrolladores. </p>
+							
+							<p>Cuento con <a href="https://certificates.academlo.com/en/verify/81973798279079" target="_blank" rel="noopener noreferrer"><span>certificaciones</span></a> que me avalan como Desarrollador Web. Soy egresado del programa Desarrollo Web Full-Stack y Ciencias de la Computación de <a href="https://www.academlo.com/curso-programacion-web-full-stack/" target="_blank" rel="noopener noreferrer"><span>Academlo</span></a>, el cual me dio las habilidades técnicas para desarrollar interfaces dinámicas y escalables, implementar y consumir API Restful, así como también entender, crear, mantener y extender el trabajo realizado en Base de Datos, Ingeniería en Sistemas y clientes. Cuento con la habilidad de ayudar con los requerimientos a otros desarrolladores. </p>
 
 							<p>En mis tiempos libres me gusta desarrollar videojuegos en la plataforma <span>Unity</span> e investigar temas sobre <span>Inteligencia Artificial</span>; soy fanático de los deportes, en especial del Manchester United y recientemente adquirí el gusto por la Fórmula 1.</p>
 
